kanc/src/tests/sample_code/should_succeed/single_file/no_warnings/recursive_index_positivity_checking.k
type List(T: Type) {
    nil(T: Type): List(T),
    cons(T: Type, car: T, cdr: List(T)): List(T),
}

type Goofy {
    c(_: List(Goofy)): Goofy,
}

let goofy = Goofy.c(List.nil(Goofy));
